--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/admin-dashboard/components/admin-dashboard-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/admin-dashboard/components/admin-dashboard-container.html
@@ -6,10 +6,30 @@
         Record New Absence
       </button>
       <ul class="dropdown-menu" role="menu">
-        <li><a href="#"><i class="fa fa-clock-o" aria-hidden="true"></i> Record Staff Late</a></li>
-        <li><a href="#"><i class="fa fa-calendar-plus-o" aria-hidden="true"></i> Record Staff Overtime</a></li>
-        <li><a href="#"><i class="fa fa-stethoscope" aria-hidden="true"></i> Record Staff Sickness</a></li>
-        <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i> Record Staff Leave</a></li>
+        <li>
+          <a
+            href="#"
+            leave-request-popup leave-type="toil"
+            contact-id="$root.settings.contactId">
+            <i class="fa fa-calendar-plus-o" aria-hidden="true"></i> Record Staff Overtime
+          </a>
+        </li>
+        <li>
+          <a
+            href="#"
+            leave-request-popup leave-type="sickness"
+            contact-id="$root.settings.contactId">
+            <i class="fa fa-stethoscope" aria-hidden="true"></i> Record Staff Sickness
+          </a>
+        </li>
+        <li>
+          <a
+            href="#"
+            leave-request-popup leave-type="leave"
+            contact-id="$root.settings.contactId">
+            <i class="fa fa-briefcase" aria-hidden="true"></i> Record Staff Leave
+          </a>
+        </li>
       </ul>
     </div>
   </div>
