--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -131,8 +131,7 @@
                         ng-switch-when="-1"
                         href
                         leave-request-popup leave-request="request"
-                        contact-id="ctrl.contactId"
-                        user-role="{{$root.role}}">
+                        contact-id="ctrl.contactId">
                         {{action}}
                       </a>
                       <a
