--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
@@ -2,21 +2,21 @@
   <div class="button-container">
     <div class="btn-group" uib-dropdown>
       <button type="button" class="btn btn-primary" leave-request-popup leave-type="leave"
-        contact-id="managerLeave.contactId" user-role="{{$root.role}}">Record New Absence</button>
+        contact-id="managerLeave.contactId">Record New Absence</button>
       <button type="button" class="btn btn-primary dropdown-toggle-split" uib-dropdown-toggle>
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" uib-dropdown-menu>
         <li>
           <a
-            leave-request-popup user-role="{{$root.role}}"
+            leave-request-popup
             contact-id="managerLeave.contactId" leave-type="sickness"
             href="#">Record Sickness
           </a>
         </li>
         <li>
           <a
-            leave-request-popup user-role="{{$root.role}}"
+            leave-request-popup
             contact-id="managerLeave.contactId" leave-type="toil"
             href="#">Record Overtime
           </a>
