--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-container.html
@@ -4,7 +4,7 @@
       <button
         type="button" class="btn btn-primary"
         leave-request-popup leave-type="leave"
-        user-role="{{$root.role}}" contact-id="myleave.contactId">
+        contact-id="myleave.contactId">
         Record New Absence
       </button>
       <button type="button" class="btn btn-primary dropdown-toggle-split" uib-dropdown-toggle>
@@ -13,14 +13,14 @@
       <ul class="dropdown-menu" uib-dropdown-menu>
         <li>
           <a
-            leave-request-popup user-role="{{$root.role}}"
+            leave-request-popup
             contact-id="myleave.contactId" leave-type="sickness"
             href="#">Record Sickness
           </a>
         </li>
         <li>
           <a
-            leave-request-popup user-role="{{$root.role}}"
+            leave-request-popup
             contact-id="myleave.contactId" leave-type="toil"
             href="#">Record Overtime
           </a>
