--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-report.html
@@ -220,8 +220,7 @@
                                       ng-switch-when="true"
                                       leave-request-popup
                                       leave-request="request"
-                                      contact-id="report.contactId"
-                                      user-role="{{$root.role}}">
+                                      contact-id="report.contactId">
                                       {{action}}
                                     </a>
                                     <a href ng-switch-default ng-click="report.action(request, action)">
@@ -393,8 +392,7 @@
                                     ng-switch-when="true"
                                     leave-request-popup
                                     leave-request="request"
-                                    contact-id="report.contactId"
-                                    user-role="{{$root.role}}">
+                                    contact-id="report.contactId">
                                     {{action}}
                                   </a>
                                   <a href ng-switch-default ng-click="report.action(request, action)">
@@ -493,8 +491,7 @@
                                     ng-switch-when="true"
                                     leave-request-popup
                                     leave-request="request"
-                                    contact-id="report.contactId"
-                                    user-role="{{$root.role}}">
+                                    contact-id="report.contactId">
                                     {{action}}
                                   </a>
                                   <a href ng-switch-default ng-click="report.action(request, action)">
