PCHR-2032: Amend templates

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/admin-dashboard/components/admin-dashboard-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/admin-dashboard/components/admin-dashboard-container.html
@@ -42,5 +42,6 @@
       <li ui-sref-active="active"><a ui-sref="calendar">Calendar</a></li>
     </ul>
   </div>
+  <div class="clear"></div>
 </div>
 <div class="clear"></div>
