--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-details-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-details-tab.html
@@ -92,7 +92,7 @@
       <div class="col-xs-4">
         <span
           class="chr_leave-request-modal__span-expiry"
-          ng-if="!$ctrl.isRole('manager')">
+          ng-if="!$ctrl.canManage">
           {{$ctrl.request.toil_expiry_date | date: $ctrl.uiOptions.userDateFormat}}
         </span>
         <div ng-if="$ctrl.canManage" class="input-group">
