PCHR-2372: Remove href from anchor

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-work-patterns.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-work-patterns.html
@@ -37,7 +37,7 @@
       <td>{{pattern.effective_date}}</td>
       <td>{{pattern.change_reason_label}}</td>
       <td class="text-center">
-        <a href="#" class="text-danger" ng-click="workpatterns.deleteWorkPattern(pattern.id)">
+        <a class="text-danger pointer" ng-click="workpatterns.deleteWorkPattern(pattern.id)">
           <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
         </a>
       </td>
