--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-files-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-files-tab.html
@@ -17,7 +17,7 @@
               'fa fa-file-word-o': file.mime_type === 'application/msword'
             }"
             aria-hidden="true"></i>
-          <span>{{file.name}}</span>
+          <span class="chr_leave-request-files_file-name">{{file.name}}</span>
         </div>
         <div
           ng-show="$ctrl.removeAttachmentVisibility(file)"
@@ -51,7 +51,7 @@
                 'fa fa-file-word-o': file.file.type == 'application/msword'
               }"
               aria-hidden="true"></i>
-            <span>{{file.file.name}}</span>
+            <span class="chr_leave-request-files_file-name">{{file.file.name}}</span>
           </div>
           <div
             ng-show="$ctrl.removeAttachmentVisibility(file)"
