PCHR-2032: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_manager_calendar.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_manager_calendar.scss
@@ -1,6 +1,6 @@
 .chr_manager_calendar__header {
   padding-top: 15px;
-  background-color: #f4f7f8;
+  background-color: $chr-panel-header-background;
 
   > div {
     display: inline-block;
