--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_manage-leave-requests.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_manage-leave-requests.scss
@@ -1,12 +1,39 @@
 .chr_manage_leave_requests {
+  &[data-role="admin"] {
+    .chr_manage_leave_requests__header {
+      text-align: center;
+      position: relative;
+    }
+
+    .chr_manage_leave_requests__leave_type_filter {
+      position: absolute;
+      left: 20px;
+    }
+
+    .chr_manage_leave_requests__assignee_filter {
+      margin-left: -10%;
+    }
+
+    .chr_manage_leave_requests__period_and_all_filters {
+      position: absolute;
+      right: 20px;
+    }
+  }
+
+  &[data-role="manager"] {
+    .chr_manage_leave_requests__leave_type_filter,
+    .chr_manage_leave_requests__period_and_all_filters {
+      float: right;
+    }
+  }
+
   .chr_manage_leave_requests__header {
     margin: 0;
-    background-color: #f4f7f8;
+    background-color: $chr-panel-header-background;
 
     .crm_custom-select {
       margin-right: 20px;
       padding: 0;
-      width: 250px;
     }
 
     .panel-title {
@@ -16,7 +43,7 @@
   }
 
   .chr_manage_leave_requests__filter {
-    margin-top: 6px;
+    margin-top: 5px;
     display: inline-block;
 
     .fa {
@@ -57,20 +84,50 @@
  * @TODO remove this patch when Shoreditch theme is migrated to SSP
  */
 .chr_manage_leave_requests {
-  .btn.ui-select-toggle {
-    padding: 4px 10px !important;
-    text-transform: none !important;
+  &[data-role="admin"] {
+    .form-group {
+      overflow: inherit !important;
+    }
+
+    .panel {
+      /*
+       * As per /sites/all/modules/civicrm/css/civicrm.css
+       * ".crm-container .panel" has a style property
+       * "background: transparent url(../i/dropdown-pointer.gif)...",
+       * which looks like a small black triangle on the top of the panel.
+       * This patch removes this triangle.
+       */
+      background-image: none !important;
+    }
+
+    .panel-body, .chr_vertical_tabs {
+      background-color: $chr-panel-header-background;
+    }
+
+    input[type="search"] {
+      width: 100% !important;
+    }
   }
 
-  .form-group {
-    overflow: inherit !important;
+  .chr_manage_leave_requests__sub-header .checkbox {
+    padding-top: 5px;
   }
+}
 
-  .panel {
-    background-image: none !important;
-  }
-
-  .panel-body, .chr_vertical_tabs {
-    background-color: #f4f7f8;
+/*
+ * This is a temporary patch which fixes CSS in the component (for SSP only)
+ * @TODO remove this patch when Shoreditch theme is migrated to SSP
+ */
+.page-manager-leave {
+  .chr_manage_leave_requests {
+    .btn-sm {
+      /*
+       * We must use .btn-sm as per Bootstrap Style Guide,
+       * however in this case the font in buttons will be smaller in SSP,
+       * than for other elements.
+       * This patch makes these buttons look consistent with other elements.
+       */
+      font-size: 100% !important;
+    }
   }
 }
