--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup.html
@@ -58,20 +58,10 @@
               </ng-include>
             </uib-tab>
             <uib-tab heading="Comments">
-              <leave-request-popup-comments-tab
-              request="$ctrl.request"
-              mode="$ctrl.mode"
-              can-manage="$ctrl.canManage"
-              >
-              </leave-request-popup-comments-tab>
+              <leave-request-popup-comments-tab request="$ctrl.request" mode="$ctrl.mode" can-manage="$ctrl.canManage"></leave-request-popup-comments-tab>
             </uib-tab>
             <uib-tab heading="Files">
-              <leave-request-popup-files-tab
-                request="$ctrl.request"
-                mode="$ctrl.mode"
-                can-manage="$ctrl.canManage"
-              >
-              </leave-request-popup-files-tab>
+              <leave-request-popup-files-tab request="$ctrl.request" mode="$ctrl.mode" can-manage="$ctrl.canManage"></leave-request-popup-files-tab>
             </uib-tab>
           </uib-tabset>
         </div>
