PCHR-2164: Attachments downloadable

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-files-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-files-tab.html
@@ -16,7 +16,9 @@
               'fa fa-file-word-o': file.mime_type === 'application/msword'
             }"
             aria-hidden="true"></i>
-          <span class="chr_leave-request-files_file-name">{{file.name}}</span>
+          <span class="chr_leave-request-files_file-name">
+            <a href="{{file.url}}" target="_blank">{{file.name}}<a/>
+          </span>
         </div>
         <div
           ng-show="filesTab.removeAttachmentVisibility(file)"
