PCHR-2395: Amend templates

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-container.html
@@ -2,7 +2,9 @@
   <div class="button-container">
     <leave-request-create-dropdown
       btn-class="btn-primary"
-      contact-id="myleave.contactId">
+      contact-id="myleave.contactId"
+      selected-contact-id="myleave.contactId"
+      is-self-record="true">
     </leave-request-create-dropdown>
   </div>
   <div class="tabs-container">
