--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-create-dropdown.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-create-dropdown.html
@@ -8,7 +8,8 @@
         href="#"
         leave-request-popup leave-type="{{option.type}}"
         contact-id="vm.contactId"
-        selected-contact-id="vm.selectedContactId">
+        selected-contact-id="vm.selectedContactId"
+        is-self-record="vm.isSelfRecord">
         <i class="fa fa-{{option.icon}}" aria-hidden="true"></i> {{option.label}}
       </a>
     </li>
