--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup.html
@@ -4,14 +4,14 @@
 
 <crm-loading show="!$ctrl.loading.absenceTypes">
   <div
-    ng-show="$ctrl.canManage && !$ctrl.isMode('create')"
+    ng-show="$ctrl.canManage && !$ctrl.isMode('create') && !$ctrl.isSelfRecord"
     class="row chr_leave-request-modal__user-info">
     <span class="col-xs-6">{{$ctrl.contactName}}</span>
     <span class="col-xs-6">{{::$ctrl.getStatusFromValue($ctrl.request.status_id).label}}</span>
   </div>
   <!-- ng-show is required in model as it was not showing the list of managees for ui-select-choices-->
-  <div class="modal-body chr_leave-request-modal__form">
-    <div ng-show="$ctrl.canManage && !$ctrl.isMode('edit')">
+  <div class="modal-body chr_leave-request-modal__form" ng-if="!$ctrl.loading.absenceTypes">
+    <div ng-show="$ctrl.canManage && !$ctrl.isMode('edit') && !$ctrl.isSelfRecord">
       <ui-select
         autofocus
         ng-model="$ctrl.request.contact_id"
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div
-        ng-show="$ctrl.canManage"
+        ng-show="$ctrl.canManage && !$ctrl.isSelfRecord"
         class="row chr_leave-request-modal__response">
         <div class="col-xs-12 form-horizontal">
           <div class="form-group">
