PCHR-2406: Add a style for field disabling

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
@@ -3,6 +3,7 @@
 @import "mixins/*";
 
 #bootstrap-theme {
+  @import "base/*";
   @import "overrides/style/*";
   @import "components/*";
   @import "pages/*";
