--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
@@ -3,7 +3,7 @@
 @import "mixins/*";
 
 #bootstrap-theme {
-  @import "base/*";
+  @import "base/helpers/*";
   @import "overrides/style/*";
   @import "components/*";
   @import "pages/*";
