PCHR-2385: hide expiry date field when it never expires

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-details-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-details-tab.html
@@ -84,7 +84,7 @@
 </crm-loading>
 
 <!--Expiry Date Section - Only For Toil-->
-<div class="row" ng-show="$ctrl.isLeaveType('toil')">
+<div class="row" ng-show="$ctrl.isLeaveType('toil') && $ctrl.requestCanExpire">
   <div class="col-xs-12 form-horizontal">
     <hr>
     <div class="form-group">
